--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -8,7 +8,8 @@
     padding: 1rem 1.5rem;
     display: flex;
     justify-content: center;
-    background: #00000086;
+    background: transparent;
+    backdrop-filter: blur(3px)
 }
 
 
