--- a/assets/css/variabes.css
+++ b/assets/css/variabes.css
@@ -19,6 +19,7 @@ html {
 
 
 body {
+    align-items: center;
     padding-top: 50px;
     margin: 0;
     font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
